<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_name"
        android:layout_height="wrap_content"
        android:textColor="@color/txtColor"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/txt_login"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_username"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textSize="24sp"/>
</LinearLayout>