<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >


        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/incubator"
            android:background="@drawable/layout_bg"
android:contentDescription="@string/app_name"
            />

        <TextView
            android:id="@+id/txt_summerCode"
            android:layout_width="match_parent"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/txtColor"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:layout_below="@+id/img"
            android:layout_marginTop="0dp"
            />

        <TextView
            android:id="@+id/txt_loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_below="@id/txt_summerCode"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textEmailAddress"
            android:hint="@string/edt_username"
            android:textColor="@color/bg"
            android:textSize="24sp"
            android:textStyle="bold"
            android:autofillHints="email"
            android:layout_below="@id/txt_loginTitle"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_bg"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/edt_password"
            android:inputType="textPassword"
            android:textColor="@color/bg"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/layout_bg"
            android:layout_below="@id/edt_username"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:autofillHints="Password"
            />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:text="@string/btn_login"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_height="70dp"
            android:textStyle="bold"
            android:background="@drawable/layout_bg"
            android:layout_below="@id/edt_password"
            android:textColor="@color/bg"/>



        <TextView
            android:id="@+id/txt_register"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_click_here"
            android:layout_below="@+id/btn_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:clickable="true"
            android:focusable="true"
            android:linksClickable="true"
            android:onClick="perform_action"
            android:layout_marginBottom="50dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/copyright"/>
    </RelativeLayout>
</ScrollView>