<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileActivity"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg"
        android:padding="20dp"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/me"
            android:layout_marginTop="20dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="10dp"
            app:civ_border_overlay="true"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/software_developer"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

       <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/layout_bg"
                android:padding="20dp"
                android:layout_marginTop="30dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Mkparu Chisom"
                    android:textSize="20sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/bg"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:textAlignment="center"
                    android:autofillHints="Name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="donchi4all@gmail.com"
                    android:enabled="false"
                    android:textSize="20sp"
                    android:textColor="@color/bg"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:autofillHints="Email"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="27"
                    android:enabled="false"
                    android:textSize="20sp"
                    android:inputType="numberSigned"
                    android:textColor="@color/bg"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:autofillHints="Age"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="07065114740"
                    android:enabled="false"
                    android:textSize="20sp"
                    android:inputType="number"
                    android:textColor="@color/bg"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:autofillHints="mobile"/>


                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="40dp"/>

            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:text="@string/copyright"/>
    </LinearLayout>

</ScrollView>